tor (0.2.2.7-alpha-2) experimental; urgency=low

  * debian/rules: Minor cleanup (use a single variable for making up our
    configure flags, not two).
  * debian/rules: Remove logic that ignores the result of unit tests if
    localhost does not resolve (or not to 127.0.0.1).  This should no
    longer be necessary as our build chroots have gotten a lot better.

 -- Peter Palfrader <weasel@debian.org>  Sun, 24 Jan 2010 13:22:26 +0100

tor (0.2.2.7-alpha-1) experimental; urgency=medium

  * New upstream version.
    - Rotate keys (both v3 identity and relay identity) for moria1
      and gabelmoo.
    [and more]

 -- Peter Palfrader <weasel@debian.org>  Wed, 20 Jan 2010 19:29:08 +0100

tor (0.2.2.6-alpha-1) experimental; urgency=low

  * New upstream version.
    - Drop debian/patches/0a58567c-work-with-reneg-ssl.dpatch
      (part of upstream).

 -- Peter Palfrader <weasel@debian.org>  Mon, 23 Nov 2009 18:52:04 +0100

tor (0.2.2.5-alpha-1) experimental; urgency=low

  * New upstream version.
  * Pick 0a58567ce3418f410cf1dd0143dd3e56b4a4bd1f from master git tree:
    - work with libssl that has renegotiation disabled by default.
    (debian/patches/0a58567c-work-with-reneg-ssl.dpatch)
  * Therefore build-depend on libssl-dev >= 0.9.8k-6.  If we build against
    earlier versions we will not work once libssl gets upgraded to a version
    that disabled renegotiations.
  * Change order of recommends from privoxy | polipo to polipo | privoxy.
  * Allegedly echo -e is a bashism.  Remove it from debian/rules, we don't
    need it anyways (closes: #478631).
  * Change the dependency on tsocks to torsocks | tsocks (see: #554717).

 -- Peter Palfrader <weasel@debian.org>  Sun, 15 Nov 2009 11:04:02 +0100

tor (0.2.2.4-alpha-1) experimental; urgency=low

  * New upstream version.
  * The testsuite moved from src/or/test to src/test/test,
    but let's call it using "make check" now.
  * Upstream failed to ship src/test/test.h.  Ship it in debian/ and